consulta de categorias associadas a jogos